# bpmn-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
src/bpmn_lib/: __init__.py
src/bpmn_lib/database/: __init__.py
src/bpmn_lib/database/instance/: __init__.py  database_builder.py  database_bulk_validator.py  database_index_builder.py  database_instance.py
src/bpmn_lib/database/schema/: __init__.py  column_definition.py  database_schema.py  database_schema_parser.py  foreign_key_relationship.py  table_definition.py
src/bpmn_lib/navigator/: __init__.py  bpmn_constants.py  bpmn_hierarchy_navigator.py  navigator_factory.py
src/bpmn_lib/utils/: __init__.py  validation_result.py
src/bpmn_lib/validation/: __init__.py  exceptions.py  expression_ast.py  expression_parser.py  rule_engine.py  rule_store.py
tests/: conftest.py
tests/integration/: test_database_building_pipeline.py  test_e2e_rule_validation.py  test_navigator_rule_integration.py
tests/unit/: test_bpmn_hierarchy_navigator.py  test_database_builder.py  test_database_schema.py  test_expression_ast.py  test_expression_parser.py  test_navigator_factory.py  test_rule_engine.py  test_rule_store.py  test_table_definition.py
tests/utils/: test_helpers.py
