[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn-lib"
version = "2.0.0"
description = "BPMN Process Navigation Library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Hennig IT Consulting GmbH", email = "contact@hennig-it-consulting.de"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "basic-framework>=3.2.0,<3.3.0",
    "chardet>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/hennig-ai/bpmn-lib"
Repository = "https://github.com/hennig-ai/bpmn-lib"
Issues = "https://github.com/hennig-ai/bpmn-lib"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
