[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn-lib"
version = "3.0.0"
description = "BPMN Process Navigation Library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Topic :: Software Development :: Libraries",]
dependencies = [ "basic-framework @ git+https://github.com/hennig-ai/basic-framework.git@main", "chardet>=5.0.0",]
[[project.authors]]
name = "Hennig IT Consulting GmbH"
email = "contact@hennig-it-consulting.de"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/hennig-ai/bpmn-lib"
Repository = "https://github.com/hennig-ai/bpmn-lib"
Issues = "https://github.com/hennig-ai/bpmn-lib"

[project.optional-dependencies]
dev = [ "pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-xdist>=3.5.0", "pyright>=1.1.0",]

[tool.setuptools.packages.find]
where = [ "src",]
